--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "nuxt": "3.0.0-rc.9"
   },
   "dependencies": {
-    "@nuxtjs/color-mode": "^3.1.5",
     "@iconify-json/carbon": "^1.1.7",
     "@iconify-json/twemoji": "^1.1.5",
+    "@nuxtjs/color-mode": "^3.1.5",
+    "@nuxtjs/i18n": "^8.0.0-alpha.1",
     "@pinia/nuxt": "^0.4.2",
     "@unocss/nuxt": "^0.45.18",
     "@vueuse/nuxt": "^9.2.0",
